<resources>
    <string name="app_name" translatable="false">IOSTDex</string>
    <string name="title_home">首页</string>
    <string name="title_order">订单</string>
    <string name="title_assets">资产</string>
    <string name="app_network_socket_timeout">网络连接超时!</string>
    <string name="login_title">钱包登录</string>
    <string name="login_slogan">首家IOST去中心化交易所</string>

    <string name="order_pair">交易对</string>
    <string name="order_trade_direction">交易方向</string>
    <string name="order_buy">买入</string>
    <string name="order_sell">卖出</string>
    <string name="order_commission_time">委托时间</string>
    <string name="order_status">状态</string>

    <string name="assets_total">当前资产总估值</string>
    <string name="asset_text">估值:</string>
    <string name="asset_balance">余额:</string>
    <string name="asset_frozen">冻结:</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="assets_all">所有币种</string>
    <string name="assets_no_zero">非零资产</string>

    <string name="tab_my_commission">我的委托</string>
    <string name="tab_history_order">历史订单</string>

    <string-array name="order_status">
        <item>全部</item>
        <item>未处理</item>
        <item>未成交</item>
        <item>部分成交</item>
        <item>全部成交</item>
        <item>撤单</item>
    </string-array>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="reset">重置</string>
    <string name="please_select">请选择</string>

    <string name="order_finish_amount">成交额</string>
    <string name="order_commission_price">委托价</string>
    <string name="order_finish_price">成交价</string>
    <string name="order_commission_volume">委托量</string>
    <string name="order_finish_num">成交量</string>
    <string name="order_to_user">成交对象</string>
    <string name="order_fee">手续费</string>
    <string name="material_calendar_today_button">今天</string>
    <string name="material_calendar_positive_button" translatable="false">@android:string/ok</string>
    <string name="material_calendar_negative_button" translatable="false">@android:string/cancel</string>
    <array name="material_calendar_months_array">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </array>

    <string name="trade_max">24H最高:</string>
    <string name="trade_min">24H最低:</string>
    <string name="trade_volume">24H量:</string>
    <string name="trade_more">更多</string>
    <string name="trade_index">指标</string>
    <string name="trade_main_graph">主图</string>
    <string name="trade_auxiliary_graph">副图</string>
    <string name="trade_hide">隐藏</string>
    <string name="trade_depth">深度</string>
    <string name="trade_Deal">成交</string>
    <string name="trade_intro">简介</string>
    <string name="trade_depth_amt">数量</string>
    <string name="trade_depth_price">价格</string>
    <string name="trade_deal_time">时间</string>
    <string name="trade_details">交易详情</string>
    <string name="trade_finish_time">成交时间</string>
    <string name="trade_finish_buyer">买家</string>
    <string name="trade_finish_account">账户名:</string>
    <string name="trade_finish_billing">结算数量:</string>
    <string name="trade_commission_hash">委托Hash:</string>
    <string name="trade_finish_hash">成交Hash:</string>
    <string name="trade_finish_seller">卖家</string>
    <string name="trade_intro_information">基本信息</string>
    <string name="trade_intro_token_code">代币代码</string>
    <string name="trade_intro_max_supply">最大发行量</string>
    <string name="trade_intro_available_supply">已发行量</string>
    <string name="trade_intro_website">官方网站</string>
    <string-array name="trade_array">
        <item>限价</item>
        <item>市价</item>
    </string-array>
    <string name="trade_text">以当前最优价格交易</string>
    <string name="trade_text1">可用:</string>
    <string name="trade_text2">可用量不足</string>
    <string name="login">登录</string>
    <string name="trade_error_1">请输入价格与数量</string>
    <string name="trade_error_2">交易总额不能低于 1 IOST</string>
    <string name="trade_error_3">操作失败</string>
    <string name="trade_success">操作成功</string>
    <string name="trade_text3">已经完成交易，无法操作</string>
    <string name="trade_text4">确认是否撤单</string>

    <string name="language_zh_cn" translatable="false">简体中文</string>
    <string name="language_hk_cn" translatable="false">繁体中文</string>
    <string name="language_gb_en" translatable="false">English</string>
    <string name="language_kr_ko" translatable="false">한국어</string>
    <string name="cn_warr" translatable="false">您好，IOSTDex 不向来自中国用户提供服务。\n我们无意诱使任何人违反任何地方或国家法律。玩家的唯一责任是参考其管辖范围内的法律，以确定行为的合法性。</string>
</resources>
