<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="user"
                type="io.iostwin.iostdex.domain.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="32dp"
                android:paddingBottom="64dp"
                app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/login_slogan"
                    android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_button_drak"
                android:onClick="@{(v)->user.login(v.getContext())}"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_tp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>